<resources>
    <string name="app_name">Kotlin</string>
    <string name="kotlin">Example 1</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="button_4">Button 4</string>
    <string name="email">Email</string>
    <string name="image_description">Example icon</string>
    <string name="hint">emailAddress</string>
</resources>