<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Example1"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:background="#00796B"
        android:text="@string/kotlin"
        android:textAlignment="viewStart"
        android:textColor="#F6F3F3"
        android:textSize="34sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="242dp"
        android:src="@android:mipmap/sym_def_app_icon"
        android:contentDescription="@string/image_description" />

    <!-- GridLayout for 2x2 Button arrangement -->
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:columnCount="2"
        android:rowCount="2">

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/button_1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/button_2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/button_3" />

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/button_4" />

    </GridLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="47dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/email" />

        <EditText
            android:id="@+id/editTextTextEmailAddress2"
            android:layout_width="279dp"
            android:layout_height="87dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/hint"
            android:autofillHints="emailAddress"/>
    </LinearLayout>


</LinearLayout>
